fix(console): align file picker accept with API format in V4 import flow

--- a/gravitee-apim-console-webui/src/management/api/import-v4/api-import-v4-form-dialog/api-import-v4-form-dialog.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/import-v4/api-import-v4-form-dialog/api-import-v4-form-dialog.component.scss
@@ -8,8 +8,8 @@
 .api-import-v4-form-dialog__content {
   flex: 1 1 auto;
   min-height: 0;
-  padding-top: 0;
   display: flex;
   flex-direction: column;
   overflow: auto;
+  max-height: unset;
 }
